<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/champagne"
    tools:context=".AddImageActivity">

    <TextView

        android:id="@+id/AddImageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/lemands"
        android:padding="30dp"
        android:text="@string/add_clothing"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="65sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/radioLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="Choose Clothing Type: "
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/AddImageTitle" />


    <RadioGroup
        android:id="@+id/clothingSelectionGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/radioLabel">

        <RadioButton
            android:id="@+id/shirtButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/top"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/pantsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/bottoms"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/dressButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/dress"
            android:textSize="25sp" />
    </RadioGroup>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clothingSelectionGroup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/container_card"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clothingSelectionGroup">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_margin="40dp"
                android:background="@drawable/edit_text_box"
                android:contentDescription="@string/add_clothing"
                android:elevation="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:id="@+id/takePictureButton"
                    android:background="@color/reseda_green"
                    android:padding="10dp"
                    android:text="@string/take_picture"
                    android:textColor="@color/white" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:id="@+id/OpenLibrary"
                    android:background="@color/reseda_green"
                    android:padding="10dp"
                    android:text="@string/add_from_library"
                    android:textColor="@color/white" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/submitButton"
                android:layout_margin="10dp"
                android:background="@color/reseda_green"
                android:padding="10dp"
                android:text="@string/submit"
                android:textColor="@color/white" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:id="@+id/cancelButton"
                android:background="@color/blush"
                android:padding="10dp"
                android:text="@string/go_back"
                android:textColor="@color/white" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>