<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".loginFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/container_card"
        android:orientation="vertical"
        android:padding="30dp"
        android:paddingBottom="55dp"
        android:outlineAmbientShadowColor="@color/black"
        android:elevation="24sp"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lemands"
            android:paddingBottom="20sp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="italic"
            android:text="@string/username"
            android:labelFor="@id/usernameInput"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameInput"
            android:layout_marginVertical="5dp"
            android:background="@drawable/edit_text_box"
            android:hint="@string/username"
            android:paddingVertical="5dp"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="17sp"
            android:labelFor="@id/passwordInput"
            android:textStyle="italic"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordInput"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="0dp"
            android:background="@drawable/edit_text_box"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingVertical="5dp"
            android:paddingHorizontal="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15sp"
            android:text="@string/forgot_password"
            android:textColor="@color/reseda_green"
            android:textSize="15sp"
            android:textStyle="italic" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/loginButton"
            android:text="@string/login"
            android:backgroundTint="@color/reseda_green"
            android:textSize="17sp"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:paddingVertical="1dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10sp"
            android:textStyle="italic"
            android:text="@string/new_sign_up_here"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

</FrameLayout>