<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/SignUpCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/container_card"
        android:elevation="24sp"
        android:orientation="vertical"
        android:outlineAmbientShadowColor="@color/black"
        android:padding="30dp"
        android:paddingBottom="55dp">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lemands"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/createFirstNameInput"
            android:paddingTop="5dp"
            android:text="@string/first_name"
            android:textSize="17sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/createFirstNameInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:autofillHints="name"
            android:background="@drawable/edit_text_box"
            android:hint="@string/first_name"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textSize="17sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/createLastNameInput"
            android:paddingTop="5dp"
            android:text="@string/last_name"
            android:textSize="17sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/createLastNameInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:autofillHints="name"
            android:background="@drawable/edit_text_box"
            android:hint="@string/last_name"
            android:inputType="text"
            android:paddingHorizontal="13dp"
            android:paddingVertical="5dp"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/createEmailInput"
            android:paddingTop="5dp"
            android:text="@string/email"
            android:textSize="17sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/createEmailInput"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_box"
            android:hint="@string/email"
            android:paddingHorizontal="13dp"
            android:paddingVertical="5dp"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/createUsernameInput"
            android:paddingTop="5dp"
            android:text="@string/username"
            android:textSize="17sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/createUsernameInput"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_box"
            android:hint="@string/username"
            android:paddingHorizontal="13dp"
            android:paddingVertical="5dp"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/createPasswordInput"
            android:paddingTop="5dp"
            android:text="@string/password"
            android:textSize="17sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/createPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_box"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="13dp"
            android:paddingVertical="5dp"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/confirmPasswordInput"
            android:paddingTop="5dp"
            android:text="@string/confirm_password"
            android:textSize="17sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_box"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingHorizontal="13dp"
            android:paddingVertical="5dp"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/signupErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textColor="@color/blush"
            android:textSize="20sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/reseda_green"
            android:paddingVertical="1dp"
            android:text="@string/sign_up"
            android:textSize="17sp"
            android:textStyle="italic"
            android:textColor="@color/white"
            />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>