<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grad">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-69dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/SignUpCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/container_card"
                android:elevation="24sp"
                android:orientation="vertical"
                android:outlineAmbientShadowColor="@color/black"
                android:padding="30dp"
                android:paddingBottom="55dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/lemands"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:labelFor="@id/createFirstNameInput"
                    android:text="@string/first_name"
                    android:textStyle="italic"
                    android:textSize="17sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/edit_text_box"
                    android:autofillHints="name"
                    android:inputType="text"
                    android:hint="@string/first_name"
                    android:id="@+id/createFirstNameInput"
                    android:paddingVertical="5dp"
                    android:paddingHorizontal="10dp"
                    android:textSize="17sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:labelFor="@id/createLastNameInput"
                    android:text="@string/last_name"
                    android:textStyle="italic"
                    android:textSize="17sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:inputType="text"
                    android:autofillHints="name"
                    android:background="@drawable/edit_text_box"
                    android:hint="@string/last_name"
                    android:id="@+id/createLastNameInput"
                    android:paddingVertical="5dp"
                    android:paddingHorizontal="13dp"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:labelFor="@id/createEmailInput"
                    android:text="@string/email"
                    android:textStyle="italic"
                    android:textSize="17sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:id="@+id/createEmailInput"
                    android:background="@drawable/edit_text_box"
                    android:hint="@string/email"
                    android:autofillHints="emailAddress"
                    android:paddingVertical="5dp"
                    android:paddingHorizontal="13dp"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/password"
                    android:labelFor="@id/createPasswordInput"
                    android:textSize="17sp"
                    android:textStyle="italic" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:autofillHints="password"
                    android:background="@drawable/edit_text_box"
                    android:id="@+id/createPasswordInput"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingVertical="5dp"
                    android:paddingHorizontal="13dp"
                    android:textSize="17sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/confirm_password"
                    android:textStyle="italic"
                    android:labelFor="@id/confirmPasswordInput"
                    android:textSize="17sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:autofillHints="password"
                    android:background="@drawable/edit_text_box"
                    android:hint="@string/confirm_password"
                    android:id="@+id/confirmPasswordInput"
                    android:inputType="textPassword"
                    android:paddingVertical="5dp"
                    android:paddingHorizontal="13dp"
                    android:textSize="17sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:id="@+id/signupErrorMessage"
                    android:textColor="@color/blush"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/reseda_green"
                    android:paddingVertical="1dp"
                    android:text="@string/sign_up"
                    android:textSize="17sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <TextView
                android:id="@+id/AccountQuerySignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lemands"
                android:paddingTop="15dp"
                android:text="@string/already_have_an_account"
                android:textColor="@color/reseda_green"
                android:textSize="70sp"
                android:textAlignment="center"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/SignUpCard" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/reseda_green"
                android:paddingVertical="1dp"
                android:text="@string/login"
                android:textSize="17sp"
                android:textStyle="italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/AccountQuerySignUp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>